[tool.poetry]
name = "data-analysis-poetry"
version = "0.1.0"
description = "Poetry environment for data analysis packages"
authors = ["jason a. grafft <j@grafft.co>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.2"
pandas = "^1.4.1"
ipython = "^8.0.1"
MFDFA = "^0.4.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
